# supermarket-price-tracker

./: .gitignore  README.md  cron  deploy.sh  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cicd.yml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
src/: discord_webhook.py  scraper.py  storage.py  utils.py  waiter.py
src/rema/: client.py  rema_scraper.py  scraper.py
src/rema/json_dtos/: category_dto.py  category_dto_custom.py  department_dto.py
supermarket_price_tracker/rema/: category_dto.py  category_dto_custom.py  client.py  department_dtos.py
tests/: dto_builders.py  test_scraper.py  test_waiter.py
